# ZX-ESPectrum-SDL2

./: CMakeCache.txt
build_vs/: .gitignore  CMakeLists.txt  howto-build-vsproj-cmake.txt
include/: hardconfig.h  hardpins.h  messages.h
sdl2/sdl2-devel-osx-2.26.0/: INSTALL_RECEIPT.json
sdl2/sdl2-devel-osx-2.26.0/lib/x64/: libSDL2-2.0.0.dylib
sdl2/wrapper/: AudioTask.cpp  AudioTask.h  dirent.h  esp32_sdl2_wrapper.h  esp_vfs.h  fabgl.cpp  fabgl.h  fabutils.h  main.cpp  oldwrap_fabgl.h  sdmmc_cmd.h  soundgen.cpp  soundgen.h  wrap_ESP32Lib.cpp  wrap_ESP32Lib.h  wrap_FileUtils.cpp  wrap_pwm_audio.h
sdl2/wrapper/bitluni/Graphics/: Graphics.h
sdl2/wrapper/bitluni/I2S/: DMABufferDescriptor.h  I2S.cpp  I2S.h
sdl2/wrapper/bitluni/Tools/: Log.h
src/: ESPectrum.cpp  FileSNA.cpp  FileZ80.cpp  OSDMain.cpp  OSDMenu.cpp
